--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "animate.css": "^4.1.1",
     "firebase": "^10.10.0",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
@@ -37,6 +38,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^5.2.0"
   }
 }
