--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "firebase": "^10.10.0",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
@@ -24,7 +25,8 @@
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
